# shadow-hare

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LEGAL_NOTES.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  security.yml
benches/: analysis_bench.rs
docs/: CI.md  JSON_SCHEMA.md  RULES.md  TECHNICAL_AND_DESIGN_BRIEF.md
docs/detectors/: README.md  account_execute_missing_v0_block.md  account_interface_compliance.md  account_validate_forbidden_syscalls.md  arbitrary_token_transfer.md  block_timestamp_dependence.md  boolean_equality.md  cache_array_length.md  calls_loop.md  controlled_library_call.md  costly_loop.md  dead_code.md  deploy_syscall_tainted_class_hash.md  divide_before_multiply.md  felt252_overflow.md  hardcoded_address.md  incorrect_erc20_interface.md  incorrect_erc721_interface.md  initializer_replay_or_missing_guard.md  integer_truncation.md  l1_handler_payload_to_storage.md  l1_handler_unchecked_amount.md  l1_handler_unchecked_selector.md  l2_to_l1_double_send.md  l2_to_l1_tainted_destination.md  l2_to_l1_unverified_amount.md  missing_event_emission.md  missing_events_access_control.md  missing_events_arithmetic.md  missing_nonce_validation.md  missing_zero_address_check.md  multiple_external_calls.md  oracle_price_manipulation.md  pyth_deprecated_function.md  pyth_unchecked_confidence.md  pyth_unchecked_publishtime.md  reentrancy.md  reentrancy_events.md  rtlo.md  shadowing_builtin.md  (+22 more)
fixtures/clean/: protected_upgrade_helper_owner_read.sierra.json  safe_u256_checked.sierra.json  signature_replay_nonce_bound.sierra.json  view_no_state_modification.sierra.json  zero_address_checked.sierra.json
fixtures/vulnerable/: reentrancy.sierra.json  u256_underflow.sierra.json  unchecked_l1_handler.sierra.json  unprotected_upgrade_arithmetic_only.sierra.json
src/: baseline.rs  config.rs  diff.rs  error.rs  lib.rs  main.rs  scarb_main.rs
src/analysis/: callgraph.rs  cfg.rs  dataflow.rs  defuse.rs  mod.rs  reentrancy.rs  sanitizers.rs  storage.rs  storage_layout.rs  taint.rs
src/detectors/: account_execute_v0_block.rs  account_interface_compliance.rs  account_validate_syscalls.rs  address_cast.rs  array_access.rs  boolean_equality.rs  cache_array_length.rs  calls_loop.rs  costly_loop.rs  deploy_tainted_class_hash.rs  erc20_interface.rs  erc721_interface.rs  event_before_state.rs  events.rs  events_access_control.rs  events_arithmetic.rs  felt252_overflow.rs  function_complexity.rs  gas_griefing.rs  hardcoded.rs  initializer_replay.rs  integer_overflow.rs  l1_amount.rs  l1_handler.rs  l1_message.rs  l1_selector.rs  l1_storage.rs  l2l1_amount.rs  l2l1_dest.rs  l2l1_double.rs  library_call.rs  magic_numbers.rs  missing_pausable.rs  mod.rs  multi_call.rs  nonce.rs  oracle.rs  pragma.rs  precision.rs  pyth.rs  (+27 more)
src/ir/: components.rs  function.rs  mod.rs  program.rs  type_registry.rs
src/loader/: mod.rs  sierra_loader.rs  version.rs
src/output/: human.rs  json.rs  mod.rs  sarif.rs
src/printers/: data_dependence.rs  function_signatures.rs  ir_dump.rs  mod.rs  storage_layout_printer.rs
tests/: compatibility_matrix.rs  compatibility_reporting.rs  detector_golden.rs  diff_workflow.rs  printers_golden.rs  qa_harness.rs  real_contracts.rs  requirements_enforcement.rs  sarif_schema.rs
(+1 files in other folders)
