[package]
name = "shadowhare"
version = "0.1.0"
edition = "2021"
description = "Production-grade static analyzer for Cairo/Starknet smart contracts"
authors = ["br0wnD3v (AJ)"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[[bin]]
name = "shadowhare"
path = "src/main.rs"

[[bin]]
name = "shdr"
path = "src/main.rs"

[[bin]]
name = "scarb-shadowhare"
path = "src/scarb_main.rs"

[[bin]]
name = "scarb-shdr"
path = "src/scarb_main.rs"

[dependencies]
# Sierra IR parsing
cairo-lang-sierra = "2.16.0"
cairo-lang-starknet-classes = "2.16.0"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallelism
rayon = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Version parsing
semver = { version = "1", features = ["serde"] }

# Ordered maps (deterministic output)
indexmap = { version = "2", features = ["serde"] }

# String interning / small strings
smol_str = { version = "0.2", features = ["serde"] }

# Hashing for baseline fingerprints
sha2 = "0.10"
hex = "0.4"

# TOML config parsing
toml = "0.8"

# Petgraph for CFG representation
petgraph = "0.6"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
